alignment issue

--- a/src/pdp/components/EmiSectionDesktop.css
+++ b/src/pdp/components/EmiSectionDesktop.css
@@ -35,8 +35,7 @@
   height: auto;
   color: #212121;
   font-size: 14px;
-
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   cursor: pointer;
   font-family: light;
 }
